--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "webpack-merge": "^0.7.3"
   },
   "dependencies": {
+    "axios": "^0.11.0",
     "react": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
