--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
     "redux-logger": "2.4.0",
     "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
+    "rethinkdb": "^2.3.1",
     "rimraf": "^2.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "thinky": "^2.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.0",
