--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
-    "redux": "^3.1.4"
+    "redux": "^3.1.4",
+    "redux-promise": "^0.5.3"
   }
 }
