--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.15.0",
     "bootstrap-loader": "^1.0.5",
     "bootstrap-sass": "^3.3.6",
+    "chai": "^3.5.0",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
@@ -79,6 +80,7 @@
     "rimraf": "^2.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "supertest": "^1.2.0",
     "thinky": "^2.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
