--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:production": "npm run clean && npm run build",
     "lint": "eslint src",
     "start": "nodemon server/bin/server.js",
-    "test": "mocha server/test --compilers js:babel-register"
+    "test": "mocha server/test --compilers js:babel-register",
+    "testF": "mocha client/src/test/**/*.spec.js --compilers js:babel-register --recursive"
   },
   "repository": {
     "type": "git",
@@ -68,6 +69,7 @@
     "postcss-import": "^7.1.3",
     "postcss-loader": "^0.8.0",
     "react-addons-css-transition-group": "^0.14.6",
+    "react-addons-test-utils": "^15.0.2",
     "react-document-meta": "^2.0.0-rc2",
     "react-dom": "^0.14.6",
     "react-hot-loader": "^1.3.0",
