--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "rethinkdb": "^2.3.1",
     "rimraf": "^2.5.0",
     "sass-loader": "^3.1.2",
+    "socket.io": "^1.4.6",
+    "socket.io-client": "^1.4.6",
     "style-loader": "^0.13.0",
     "supertest": "^1.2.0",
     "thinky": "^2.3.2",
