--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "react-transform-hmr": "^1.0.1",
     "redux-form": "^4.1.5",
     "redux-logger": "2.4.0",
+    "redux-mock-store": "^1.0.2",
+    "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "rethinkdb": "^2.3.1",
     "rimraf": "^2.5.0",
