--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "nock": "^8.0.0",
     "supertest": "^1.2.0",
     "webpack-dev-middleware": "^1.5.0",
-    "webpack-dev-server": "^1.14.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "autoprefixer": "6.3.1",
