(refactor) Allow all tests to be run with a single command

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "postinstall": "npm run build:production",
     "start:dev": "nodemon server/bin/server.js",
     "start": "node server/bin/server.js",
-    "test": "mocha server/test --compilers js:babel-register",
-    "testF": "mocha client/src/test/**/*.spec.js --compilers js:babel-register --recursive"
+    "test": "npm run testFront && npm run testBack",
+    "testFront": "mocha client/src/test/**/*.spec.js --compilers js:babel-register --recursive",
+    "testBack": "mocha server/test --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
