--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf client/dist",
     "build": "webpack --progress --verbose --colors --display-error-details --config client/webpack/common.config.js",
     "build:production": "npm run clean && npm run build",
-    "lint": "eslint src",
+    "lint": "eslint --ignore-path .gitignore **/*.js",
     "postinstall": "npm run build:production",
     "start:dev": "nodemon server/bin/server.js",
     "start": "node server/bin/server.js",
