--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:production": "npm run clean && npm run build",
     "lint": "eslint --ignore-path .gitignore **/*.js",
     "postinstall": "npm run build:production",
-    "start:dev": "nodemon server/bin/server.js",
-    "start": "node server/bin/server.js",
+    "start": "nodemon server/bin/server.js",
     "test": "npm run testFront && npm run testBack",
     "testFront": "mocha client/src/test/**/*.spec.js --compilers js:babel-register --recursive",
     "testBack": "mocha server/test --compilers js:babel-register"
