--- a/package.json
+++ b/package.json
@@ -91,8 +91,10 @@
     "react-loading-order-with-animation": "^1.0.0",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^4.0.4",
     "react-transform-hmr": "^1.0.1",
     "redux": "^3.1.4",
+    "redux-auth-wrapper": "^0.5.0",
     "redux-form": "^4.1.5",
     "redux-logger": "2.4.0",
     "redux-mock-store": "^1.0.2",
