--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "imports-loader": "^0.6.5",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
+    "material-ui": "^0.15.0",
     "morgan": "^1.6.1",
     "node-sass": "^3.4.2",
     "postcss-import": "^7.1.3",
@@ -92,6 +93,7 @@
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redux": "^3.1.4",
     "redux-auth-wrapper": "^0.5.0",
