--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-addons-css-transition-group": "^15.0.2",
     "react-document-meta": "^2.0.0-rc2",
     "react-dom": "^15.0.2",
+    "react-flip-move": "^2.2.0",
     "react-hot-loader": "^1.3.0",
     "react-loading-order-with-animation": "^1.0.0",
     "react-redux": "^4.0.6",
