--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
     "nock": "^8.0.0",
+    "nodemon": "^1.9.2",
     "supertest": "^1.2.0",
     "webpack-dev-middleware": "^1.5.0",
     "webpack-dev-server": "^1.14.1"
