--- a/package.json
+++ b/package.json
@@ -83,10 +83,12 @@
     "material-ui": "^0.15.0",
     "morgan": "^1.6.1",
     "node-sass": "^3.4.2",
+    "nodemailer": "^2.4.1",
     "postcss-import": "^7.1.3",
     "postcss-loader": "^0.8.0",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
+    "react-copy-to-clipboard": "^4.1.0",
     "react-document-meta": "^2.0.0-rc2",
     "react-dom": "^15.0.2",
     "react-flip-move": "^2.2.0",
